# FlightController-App

./: CMakeLists.txt  map.html  resources.qrc
Header/: HorizonWidget.h  MapBridge.h  bridge.h  flightcontroller.h  home.h  main.h  mapopengl.h  mapwindow.h  serialManager.h  settings.h  websocketclient.h
Source/: HorizonWidget.cpp  MapBridge.cpp  bridge.cpp  flightcontroller.cpp  home.cpp  main.cpp  mapwindow.cpp  serialManager.cpp  settings.cpp  websocketclient.cpp
UI/: flightcontroller.ui  home.ui  main.ui  mapwindow.ui  settings.ui
